# text_to_uml

./: Cargo.toml  README.md  input.txt  input_class.txt  input_object.txt  input_package.txt  input_use_case.txt
src/: defines.rs  drawer.rs  generator.rs  gui.rs  gui2.rs  main.rs  parser.rs  reader.rs
