[package]
name = "text_to_uml"
version = "0.1.0"
authors = ["starlesschris <chkrebel98@gmail.com>", "viddie <viddie@hotmail.de>"]

[dependencies]
rusttype = "0.5.2"
azul = { git = "https://github.com/maps4print/azul", rev = "864de10a0a7cfbe88a9719a5c7070d2323a58de3" }
#conrod = { version = "0.55.0", features = ["glium", "winit"] }
image = "*"
imageproc = "0.16.0"
rand = "0.6.0"