[package]
name = "text_to_uml"
version = "0.1.0"
authors = ["starlesschris <chkrebel98@gmail.com>", "viddie <viddie@hotmail.de>"]

[dependencies]
rusttype = "0.5.2"
image = "0.20"
imageproc = { version = "0.16.0", default-features = false }
rand = "0.6.0"
nom = "^4.1"

[dependencies.azul]
git = "https://github.com/maps4print/azul"
rev = "55214e134b636c68919ecac7f20547cbeb56223f"
default-features = false
features = ["native-style", "css-parser"]
